--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main id="grid-area">
+      <section></section>
+      <img id="left" src="" alt="" />
+      <img id="mid" src="" alt="" />
+      <img id="right" src="" alt="" />
+      <p id="text-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non vel cumque
+        possimus neque quibusdam enim aliquid temporibus quae inventore
+        voluptatem, nulla porro laboriosam architecto libero minus nostrum atque
+        alias nesciunt adipisci? Fuga odit ut fugit maxime, vel saepe qui
+        expedita, aut cum quis illum quos dolor. Aliquid, sapiente asperiores!
+        Nulla voluptas, vel optio voluptate aspernatur, nam ratione autem
+        obcaecati, animi distinctio repudiandae quo molestiae. Dicta laborum
+        quasi suscipit, eveniet, ab nemo voluptates tempora molestias porro,
+        delectus cum reprehenderit rerum sunt similique. Et eveniet sunt numquam
+        minima reiciendis dolor deleniti aut dolore hic distinctio. Eligendi,
+        accusantium. Odit placeat pariatur libero cumque expedita fugiat ex iste
+        ea unde perferendis est optio minima veritatis officia eveniet,
+        reiciendis adipisci impedit qui ipsa itaque ab?
+      </p>
+    </main>
+    <footer></footer>
+  </body>
 </html>
