change html structure

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <header></header>
     <main id="grid-area">
       <section></section>
-      <img id="left" src="" alt="" />
-      <img id="mid" src="" alt="" />
-      <img id="right" src="" alt="" />
+      <div id="imgSection">
+        <img id="left" src="" alt="" />
+        <img id="mid" src="" alt="" />
+        <img id="right" src="" alt="" />
+      </div>
       <p id="text-content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Non vel cumque
         possimus neque quibusdam enim aliquid temporibus quae inventore
