--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <header></header>
     <main id="grid-area">
-      <section></section>
+      <section>
+        <ul id="score-counter"></ul>
+      </section>
       <div id="imgSection">
         <img id="left" src="" alt="" />
         <img id="mid" src="" alt="" />
