--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&family=Work+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+
     <script src="app.js" defer></script>
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="assets/logo.png" alt="Duck Logo" />
+      <h1>Odd Duck Co. | Quacking Great Products!</h1>
+    </header>
     <main id="grid-area">
       <section>
         <ul id="score-counter"></ul>
@@ -34,6 +44,11 @@
         accusantium. Odit placeat pariatur libero cumque expedita fugiat ex iste
         ea unde perferendis est optio minima veritatis officia eveniet,
         reiciendis adipisci impedit qui ipsa itaque ab?
+      </p>
+
+      <p id="mid-section-left"></p>
+      <p id="mid-section-right">
+        <a href="chart.html">View results</a>
       </p>
     </main>
     <footer></footer>
