update chart on page two

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main id="grid-area">
       <section>
-        <ul id="score-counter"></ul>
+        <table id="score-counter"></table>
       </section>
       <div id="imgSection">
         <img id="left" src="" alt="" />
@@ -46,7 +46,7 @@
         reiciendis adipisci impedit qui ipsa itaque ab?
       </p>
 
-      <p id="mid-section-left"></p>
+      <div id="mid-section-left"></div>
       <p id="mid-section-right">
         <a href="chart.html">View results</a>
       </p>
