--- a/chart.html
+++ b/chart.html
@@ -7,12 +7,17 @@
     <!-- <script src="app.js" defer></script> -->
     <script src="two.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body id="chart-page">
+    <header>
+      <img src="assets/logo.png" alt="Duck Logo" />
+    </header>
     <h1>Poll Results</h1>
     <p><a href="index.html">Go to page 1</a></p>
     <div id="chart-section"></div>
+    <div id="movable-div"></div>
   </body>
 </html>
